corrects alignment of navbar and contact form
a large screen sizes.
-adds a small border to contact section title.
-adds the scroll up button at the bottom of the page.
-makes the logo a link
-starts on the responiveness for xs screen size.

--- a/sass/partials/_global-styles.scss
+++ b/sass/partials/_global-styles.scss
@@ -16,10 +16,17 @@ body {
 }
 
 main {
-    margin-left: 250px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    //Extra Small
+    @media screen and (min-width: $break-xs) {
+        
+    }
+    //large
+    @media screen and (min-width: $break-lg) {
+        margin-left: 250px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }   
 }
 
 //Extra Small
