--- a/sass/partials/sections/_contact.scss
+++ b/sass/partials/sections/_contact.scss
@@ -1,9 +1,18 @@
 .contact-wrapper {
-    height: 100vh;
-    background-image: linear-gradient(to top right, $light-blue, $dark-blue);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    //Extra Small
+    @media screen and (min-width: $break-xs) {
+        display: none;
+    }
+    //large
+    @media screen and (min-width: $break-lg) {
+        height: 100vh;
+        background-image: linear-gradient(to top right, $light-blue, $dark-blue);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
 }
 
 .contact-form {
@@ -11,19 +20,31 @@
     background-color: rgba(241,241,230,0.9);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 60%;
-    height: 85%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 2rem;
+    padding-top: 1rem;
+    margin-top: 1rem;
     h2,
     p {
         padding-bottom: 1rem;
         color: $dark-blue;
     }
+    h2::after {
+        content: '';
+        margin-top: .25rem;
+        background-color: $dark-blue;
+        width: 135px;
+        height: 4px;
+        display: block;
+    }
+
+    p {
+        font-weight: 500;
+    }
     form {
         width: 800px;
-        margin: 0 auto;
         display: flex;
         flex-direction: column;
     } 
@@ -37,7 +58,7 @@
     input[type=text], 
     textarea {
         width: 80%;
-        padding: 1rem;
+        padding: 0.75rem;
         border-radius: .25rem;
         border: 2px solid $dark-blue;
         margin: .25rem 0 1rem 80px;
@@ -66,9 +87,31 @@
             cursor: pointer;
         }
     }
-    .make-maroon {
+    .make-maroon { //Asterixes
         color: $dark-maroon;
         font-size: 1.25rem;
     }
 }
 
+.scroll-up {
+    text-decoration: none;
+    margin-top: 1rem;
+    .scroll-up-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 2;
+        &:hover {
+            transform: scale(1.25);
+        }
+        h1 {
+            color: $nearly-white;
+            font-size: 1.5rem;
+        }
+        i {
+            color: $nearly-white;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+    }
+}
