--- a/sass/partials/sections/_hero.scss
+++ b/sass/partials/sections/_hero.scss
@@ -1,37 +1,57 @@
 .hero-wrapper {
-    height: 100vh;
-    width: auto;
-    background-image: url(/img/hero-cube-1800x1012.jpg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    object-fit: contain;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    
     //Extra Small
     @media screen and (min-width: $break-xs) {
-        
+        height: 75vh;
+        width: 100vw;
+        background-image: url(/img/hero-cube-1800x1012.jpg);
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        object-fit: contain;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+    //large
+    @media screen and (min-width: $break-lg) {
+        height: 100vh;
+        width: auto;
+        background-image: url(/img/hero-cube-1800x1012.jpg);
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        object-fit: contain;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
     }
     .scroll-down {
-        text-decoration: none;
-        margin-bottom: 2rem;
-        .scroll-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            z-index: 2;
-            &:hover {
-                transform: scale(1.25);
-            }
-            h1 {
-                color: $nearly-white;
-                font-size: 1.5rem;
-                margin-bottom: 1rem;
-            }
-            i {
-                color: $nearly-white;
-                font-size: 2.5rem;
-                margin-bottom: 1rem;
+        //Extra Small
+        @media screen and (min-width: $break-xs) {
+            visibility: hidden;
+        }
+        //large
+        @media screen and (min-width: $break-lg) {
+            visibility: visible;
+            text-decoration: none;
+            margin-bottom: 2rem;
+            .scroll-wrapper {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                z-index: 2;
+                &:hover {
+                    transform: scale(1.25);
+                }
+                h1 {
+                    color: $nearly-white;
+                    font-size: 1.5rem;
+                    margin-bottom: 1rem;
+                }
+                i {
+                    color: $nearly-white;
+                    font-size: 2.5rem;
+                    margin-bottom: 1rem;
+                }
             }
         }
     }
